# cpp-wasm-web-template

./: .gitignore  CMakeLists.txt  LICENSE  README.md
Client/: CMakeLists.txt  package-lock.json  package.json  webpack.config.js
Client/content/: index.html
Client/content/debug/: client.wasm.wasm.map
Client/content/debug/src/cpp/: Main.cpp
Client/content/js/: index.js
Client/content/wasm/: client.wasm.js  client.wasm.wasm
cmake/: BuildClient.cmake  BuildServer.cmake  CheckPython.cmake  GetEmscripten.cmake  GetMingw.cmake  GetOpenSSL.cmake  InstallDep.cmake
